# codingame-achievement-languages

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/cli/cli/: Cargo.toml
crates/cli/cli/src/: main.rs
crates/cli/command/transform/: Cargo.toml
crates/cli/command/transform/src/: lib.rs
crates/cli/core/: Cargo.toml
crates/cli/core/src/: languages.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/languages/: Cargo.toml
crates/translator/: Cargo.toml
crates/translator/src/: lib.rs
crates/translator/src/languages/: clang.rs  javascript.rs  mod.rs
src/: lib.rs  main.rs
src/langs/: bash.rs  clang.rs  clojure.rs  cpp.rs  csharp.rs  fsharp.rs  go.rs  groovy.rs  java.rs  lua.rs  mod.rs  ocaml.rs  pascal.rs  python3.rs  vbnet.rs
