[package]
name = "cli"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"
description = "Solve a challenge one time and progress in every other languages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
cli-core = { path = "../core" }
cli-command-transform = { path = "../command/transform" }
