[package]
name = "cli-command-transform"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-core = { path = "../../core" }
translator = { path = "../../../translator" }
